--- a/views/cadastro_usuario.ejs
+++ b/views/cadastro_usuario.ejs
@@ -16,6 +16,7 @@
       </head>
     <body>
         <div class="criarctn">
+          <form method="POST" action="/salvar_usuario">
             <input type="submit" name="" value=" Nome " disabled class="inputTitle">
             <input class="inputForm" type="text"    id="nome" placeholder="Nome" class="inputForm"><br>
             <input type="submit" class="inputTitle" value="Sobrenome"disabled>
@@ -47,6 +48,7 @@
             </div>
             <input class="BTN" type="submit" onclick="Finalizar()" id="finalizar" value="Finalizar"/>
             <input class="BTN" type="submit" onclick="location.href = '/'" id="voltar" value="Voltar"/>
+          </form>
           </div>
     </body>
 
