--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: sans-serif;
-  background-color: #A9A9A9 ;
+  background-color: white ;
 
 }
 
@@ -234,3 +234,145 @@ input[type=number]::-webkit-outer-spin-button {
   filter: saturate(3) brightness(2);
 
 }
+
+
+#adocao
+{
+ background-color: blueviolet;
+ width: 656px;
+ height: 698px;
+
+}
+#tipo
+{
+margin-top: 15px;
+text-align: center;
+background-color: red;
+border: 3px solid #fbfbfb;
+width: 150px;
+height: 100px;
+margin-left: 25px;
+
+}
+#idade
+{
+  margin-top: 15px;
+  text-align: center;
+  background-color: green;
+  border: 3px solid #73AD21;
+  width: 150px;
+  height: 150px;
+  margin-left: 25px;
+  
+}
+
+#raca
+{
+margin-top: 15px;
+text-align: center;
+background-color: blue;
+border: 3px solid #fbfbfb;
+width: 200px;
+height: 75px;
+margin-left: 15px;
+}
+
+
+
+
+#caracteristicas
+{
+    width: 550px;
+    padding: 12px 10px;
+    margin: 8px 10px;
+    box-sizing: border-box;
+    margin-left: 15px;
+}
+
+
+#rac_ca{
+  background-color: chocolate;
+  width: 330px;
+  height: 350px;
+  float: left;
+  margin-top: 15px;
+  margin-left: 30px;
+}
+#tip_id
+{
+  background-color: coral;
+  width: 250px;
+  height: 350px;
+  float: left;
+  margin-top: 15px;
+  margin-left: 30px;
+  
+    
+}
+textarea
+{
+  width: 270px;
+  height: 200px;
+  border-radius: 10px;
+}
+
+#foto
+{
+  width: 600px;
+  height: 270px;
+  background-color: blue;
+  margin-top: 15px;
+  float: left;
+  margin-left: 30px;
+}
+
+
+form{
+  top: 50%;
+  left: 50%;
+  margin-top: 75px;
+  margin-left: 50px;
+  width: 200px;
+  height: 200px;
+  border: 4px dashed rgb(112, 112, 112);
+}
+form p{
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 170px;
+  color: #000000;
+  font-family: Arial;
+}
+form input{
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  opacity: 0;
+}
+form button{
+  margin: 0;
+  color: #fff;
+  background: #16a085;
+  border: none;
+  width: 200px;
+  height: 35px;
+  float: right;
+  margin-top: -20px;
+  margin-left: -4px;
+  border-radius: 4px;
+  border-bottom: 4px solid #117A60;
+  transition: all .2s ease;
+  outline: none;
+}
+form button:hover{
+  background: #149174;
+    color: #0C5645;
+}
+form button:active{
+  border:0;
+}
+
