--- a/views/cadastro_usuario.ejs
+++ b/views/cadastro_usuario.ejs
@@ -10,8 +10,6 @@
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"></script>
-        <script src="js/master.js" charset="utf-8"></script>
-        <script src="js/enter.js" charset="utf-8"></script>
         <title></title>
       </head>
     <body>
@@ -21,7 +19,7 @@
         <!--mock-up de login-->
           <img id="imagemCao" src="images\caoo.jpg" width="200px">
        
-          <form method="POST" action="/salvar_usuario">  
+          <form  id = "cadastro"method="POST" action="/salvar_usuario">  
 
 
         <div >
