--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -74,7 +74,7 @@ img {border: none;}
         	<div id="call">TELEFONE: (xx)xxxx-xxxx </div>
             <pre><li>
 
-        <a href="/buscasimples"><input type="submit" value="Pesquisa Simples" id="ok" /></a>       <a href="/buscaavancada"><input type="submit" value="Pesquisa Avancada" id="ok" /></a></div></pre>
+        <a href="/busca"><input type="submit" value="Pesquisa Simples" id="ok" /></a>       <a href="/buscaavancada"><input type="submit" value="Pesquisa Avancada" id="ok" /></a></div></pre>
 
         <div>
           <pre>
